fixing overflow issues

--- a/styles/components/Popup.css
+++ b/styles/components/Popup.css
@@ -20,3 +20,7 @@
   background: #555;
   border-radius: 10px;
 }
+
+::-webkit-scrollbar-corner{
+  background: transparent;
+}
